fixed button-alignment

--- a/src/components/CommonComponents/Button/Button.css
+++ b/src/components/CommonComponents/Button/Button.css
@@ -2,6 +2,7 @@
     /* border: 1px solid #ffa500; */
     display: flex;
     flex-direction: column;
+
 }
 
 .manulife-btn{
@@ -13,6 +14,8 @@ text-align: center;
 height:52px;
 border-radius: 4px;
 box-shadow: 0px 1px 2px 0px #0000001A;
+width: 100%;
+margin: 1em 0;
 }
 
 .btn-orange{
@@ -30,6 +33,16 @@ box-shadow: 0px 1px 2px 0px #0000001A;
 /* desktop version */
 @media only screen and (min-width: 525px) {
     .btn-wrapper{
-        padding: 0 !important;
+        margin: 1em 0;
+        /* border: 1px solid black; */
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        /* padding: 0 0.8em; */
+    }
+
+    .manulife-btn{
+        font-size: 1.2rem;
+        width: 48%;
     }
 }
