--- a/src/components/UserTypePage/UserTypePage.css
+++ b/src/components/UserTypePage/UserTypePage.css
@@ -22,21 +22,17 @@
     line-height: 27.24px; 
 }
 
-.btn-wrapper{
+/* .btn-wrapper{
     margin-top: 1em;
-}
+} */
 
-.manulife-btn{
+/* .manulife-btn{
     margin: 0.8em 0;
     font-size: 1.1rem;
-}
+} */
 
 /* desktop version */
 @media only screen and (min-width: 525px) {
-    body{
-        /* background-color: #F5F5F5; */
-    }
-
 
     .usertype-disclaimer{
         font-size: 16px;
@@ -53,22 +49,4 @@
         /* padding:  0em; */
     }
 
-    .btn-wrapper{
-        /* border: 1px solid black; */
-        display: flex;
-        flex-direction: row;
-        justify-content: space-between;
-        padding: 0 0.8em;
-    }
-
-    .manulife-btn{
-        margin: 0 0.6em;
-        font-size: 1.2rem;
-    }
 }
-
-
-/* mobile version */
-/* @media only screen and (max-width: 480px) {
-    
-} */
